--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pandas==1.4.3
-numpy==1.23.0
-streamlit==1.10.0
-scikit_learn==1.1.1
 sentence_transformers
+pandas
+numpy
+streamlit
+scikit_learn
+
